Fixing menu z-index

--- a/chrome/css/menu.css
+++ b/chrome/css/menu.css
@@ -3,7 +3,7 @@ nav {
     height: 20px;
     position: relative;
     background: linear-gradient(to right, lightgray, white);
-    z-index: 1;
+    z-index: 1000;
 }
 
 nav ul ul {
